# lsys

./: .gitmodules  Cargo.toml  README.md  index.html
.github/workflows/: lib.yml  pre.sh  release.yml  web-deploy.yml
assets/dioxus/: lsys-web.js  lsys-web.js.br  lsys-web_bg.wasm  lsys-web_bg.wasm.br
assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
lib/: Cargo.toml
lib/src/: lib.rs  main.rs
src/: lib.rs  main.rs
web/: .gitignore  Cargo.toml  Dioxus.toml  index.html
web/public/: manifest.json  sw.js
web/src/: main.rs
