[package]
name = "lsys"
version = "0.3.1"
authors = ["Sameer Puri <crates@purisa.me>"]
edition = "2021"
description = "Visualize 2D L-Systems with SVGs."
repository = "https://github.com/sameer/lsys"
license = "MIT"
categories = ["command-line-utilities", "rendering"]
keywords = ["system", "svg", "render", "lsystem"]

[dependencies]
# Latest version of clap supporting Rust 1.73
clap = { version = "<=4.4.18", features = ["derive"] }
thiserror = "1.0"
svgtypes = "0.15.1"
rust_decimal = { version = "1.35.0", default-features = false, features = [
    "std",
    "maths",
] }
